fix(2017F) wrap issues

--- a/HackMerced/2017F/src/app/src/styles/header.scss
+++ b/HackMerced/2017F/src/app/src/styles/header.scss
@@ -7,6 +7,9 @@ header {
   z-index: 99;
   background-color: #fff;
 
+  nav {
+    white-space: nowrap;
+  }
 
   a {
     margin: 0px 15px;
